crates/keron-lang/tests/corpus/errors/check/pattern_guard_non_boolean.keron
val x: String = match os_type() {
  "Macos" if "yes" => "mac",
  _ => "other",
}
